apps/ai/ollama-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui
  namespace: ollama-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      runtimeClassName: nvidia
      containers:
        - name: ollama-webui
          image: ghcr.io/open-webui/open-webui:git-ad31bd5-cuda
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
            limits:
              memory: 8000Mi
          volumeMounts:
          - name: webui-volume
            mountPath: /app/backend/data
      volumes:
          - name: webui-volume
            persistentVolumeClaim:
              claimName: ollama-webui-pvc
